syntax = "proto3";
package pb;
option go_package="github.com/fengjx/glca/pb";

import "common.proto";

service UserLogin {
  rpc Login (LoginReq) returns (LoginResp);
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  string token = 1;
  UserInfo user_info = 2;
}